--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "firebase": "^10.5.2",
     "leaflet": "^1.9.4",
     "mdb-react-ui-kit": "^7.0.0",
-    "next": "14.0.1",
+    "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-leaflet": "^4.2.1",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.69.5",
     "sweetalert2": "^11.9.0",
     "swr": "^2.2.4"
